  * Update Norwegian Nynorsk translations

KeePassDroid (1.9.4)
  * Add Japanese translations from Masahiro Inamura
  * Fix issue 183 and 199 from Riksa
  * Change search to work in memory

KeePassDroid (1.9.3.1)
  * Update Italian translations

KeePassDroid (1.9.3)
  * New setting to omit backup and recycle bin entries (based on contribution
    from ABGH)
  * Support databases from KeePass 1.20 (closes: #197)
  * Handle spaces correctly when browsing for keyfiles (closes: #163)
  * Don't clear password when browsing for a keyfile (closes: #166)
  * Fix problems with remembering the keyfile location (closes: #167)

KeePassDroid (1.9.2)
  * Fix date display in .kdbx entries
  * Support .kdbx format changes in KeePass 2.15
  * Move dates to the bottom of the entry view

KeePassDroid (1.9.1)
  * Don't default to missing files
  * Search the username field
  * Respect mask password setting in the edit entry activity
  * Pad entries in recent filename list

KeePassDroid (1.9)
  * New entry view design
  * Show custom strings in .kdbx databases
  * Fix expiry date in .kdbx databases

KeePassDroid (1.8.6.4)
  * Update Chinese translations
  
KeePassDroid (1.8.6.3)
  * Fix db saving issue
  
KeePassDroid (1.8.6.2)
  * Add Chinese translations
  
KeePassDroid (1.8.6)
  * New native crypto implementation
  
KeePassDroid (1.8.5.1)
  * Update Polish translation
  
KeePassDroid (1.8.5)
  * Add default database checkbox
  
KeePassDroid (1.8.4)
  * Fix crash on saving new entries
  
KeePassDroid (1.8.3)
  * Guard against crash when loading icons
  * Handle spaces correctly from file browser
  
KeePassDroid (1.8.2)
  * Support Android 2.2 backup manager
  * Add Polish translations
  * Only show notifications if username and password exist
  * Keep icons on entry update

KeePassDroid (1.8.1)
  * Android 1.5 compatibility fixes

KeePassDroid (1.8)
  * Layout updates
  * Custom icon support
  
KeePassDroid (1.7.2)
  * Password generator from Tolga Onbay
  
KeePassDroid (1.7.1)