@@ -1,4 +1,5 @@
   * Update Norwegian Nynorsk translations
+  * Resize custom icons
 
 KeePassDroid (1.9.4)
   * Add Japanese translations from Masahiro Inamura
